--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -36,15 +36,19 @@ div {
       gap: 1.2rem;
 
       .first-latter {
-        color: red;
+        font-size: 1.6rem;
+        padding-inline: 0.3rem;
+        color: black;
         background-color: white;
-        border-radius: 100%;
+        border-radius: 50%;
+        &:hover {
+          background-color: #e0ab88;
+        }
       }
       .cart-icon {
+        font-size: 1.7rem;
         color: white;
-        font-size: 1.5rem;
         &:hover {
-          transform: scale(1.2);
           color: #e0ab88;
         }
       }
