--- a/frontend/src/components/otherPges/slider.scss
+++ b/frontend/src/components/otherPges/slider.scss
@@ -1,65 +1,65 @@
-body {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  height: 100vh;
-  .page-container {
-    .page {
-      position: relative;
-      height: 100vh;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+// body {
+//   display: flex;
+//   flex-direction: column;
+//   overflow: hidden;
+//   height: 100vh;
+//   .page-container {
+//     .page {
+//       position: relative;
+//       height: 100vh;
+//       width: 100%;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+//       img {
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
+//       }
 
-      .text-overlay {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        color: white;
-        z-index: 1;
+//       .text-overlay {
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%, -50%);
+//         text-align: center;
+//         color: white;
+//         z-index: 1;
 
-        h2 {
-          font-size: 2rem;
-          margin-bottom: 1rem;
-        }
+//         h2 {
+//           font-size: 2rem;
+//           margin-bottom: 1rem;
+//         }
 
-        p {
-          font-size: 1rem;
-        }
-      }
+//         p {
+//           font-size: 1rem;
+//         }
+//       }
 
-      &.inactive {
-        visibility: hidden;
-      }
+//       &.inactive {
+//         visibility: hidden;
+//       }
 
-      &.active {
-        visibility: visible;
-      }
-    }
-  }
+//       &.active {
+//         visibility: visible;
+//       }
+//     }
+//   }
 
-  #blank {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    z-index: 2;
+//   #blank {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: transparent;
+//     opacity: 0;
+//     transition: opacity 0.3s ease;
+//     z-index: 2;
 
-    &.visible {
-      opacity: 1;
-    }
-  }
-}
+//     &.visible {
+//       opacity: 1;
+//     }
+//   }
+// }
