--- a/frontend/src/components/register/register.scss
+++ b/frontend/src/components/register/register.scss
@@ -7,10 +7,9 @@
   justify-content: center;
   align-items: center;
 
-
   .register-form {
-    padding: 4rem 11rem 7rem 11rem;
-    padding: 4rem 11rem 7rem 11rem;
+    width: 650px;
+    padding: 4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,36 +17,49 @@
     gap: 3rem;
     box-shadow: 3px 3px 15px -5px #b08568;
     border-radius: 25px;
-
+    font-family: sans-serif;
+    font-size: 2rem;
 
     @media screen and (max-width: 768px) {
-      width: 480px;
+      width: 500px;
       box-shadow: none;
       border-radius: 0;
     }
-
 
     transition: transform 0.7s ease, opacity 0.7s ease;
     transform-origin: bottom;
 
     p {
       letter-spacing: 0.2rem;
-      font-size: 3rem;
+      // font-size: 3rem;
     }
 
-    input {
-      width: 350px;
-      font-size: large;
+    .register-input {
+      // width: 350px;
+      font-size: 1rem;
       background-color: #1c1919;
       border: none;
-      padding: 1px;
+      outline: none;
+      padding: 20px;
       color: white;
 
       &::placeholder {
         color: white;
         font-style: italic;
-        font-size: 1.2rem;
-        border-bottom: 2px solid #b08568;
+        font-size: 1rem;
+        // border-bottom: 2px solid #b08568;
+      }
+    }
+    .input-div {
+      width: 100%;
+      border-bottom: 2px solid #b08568;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .eye-icon {
+        font-size: 1rem;
+        padding-right: 1rem;
       }
     }
     .register-button {
@@ -67,34 +79,37 @@
       font-size: 1.5rem;
       padding: 5rem;
       color: white;
-  }
-  .register-button-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @media screen and (max-width: 768px) {
-      flex-direction: column;
-      align-items: center;
     }
-    .login {
-      color: #b0856885;
-      font-size: 1.2rem;
-      margin-left: 10px;
-    }
-    .register-button {
-      width: 120%;
-      padding: 8px;
-      margin-top: 2rem;
-      font-size: 1.2rem;
-      background-color: #b08568d3;
+    .register-button-div {
+      width: 100%;
+      display: flex;
+      justify-content: center;
       align-items: center;
-      border-radius: 10px;
-      border: #b08568 solid 2px;
-      margin-right: 30px;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+      }
+      .register-button {
+        width: 100%;
+        padding: 8px;
+        margin-top: 2rem;
+        font-size: 1.2rem;
+        background-color: #b08568d3;
+        align-items: center;
+        border-radius: 10px;
+        border: #b08568 solid 2px;
+        margin-right: 30px;
 
-      &:hover {
-        background-color: #b08568;
-        border: #ffffff5e solid 2px;
+        &:hover {
+          background-color: #b08568;
+          border: #ffffff5e solid 2px;
+        }
+      }
+      .login {
+        width: 100%;
+        color: #b0856885;
+        font-size: 1.2rem;
+        margin-left: 10px;
       }
     }
   }
