--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,12 +1,3 @@
-// Global styles
-html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
-  background-color: #1c191a; /* #3B2F2F; #6f4e37;*/
-}
-
 // Component-specific styles
 .hero {
   position: relative;
@@ -14,34 +5,33 @@ html {
   width: 100%;
   height: 100vh;
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.5s ease-out;
-
-    &.active {
-      transform: translateY(0);
-    }
-
-    &.inactive {
-      transform: translateY(-100%);
-    }
-  }
-
-  #blank {
+  .page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 2rem;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent; // Should match the background color of your page
-    z-index: 5; // Adjust as needed
-    opacity: 0;
-    transition: opacity 0.5s ease;
+    overflow: hidden;
+    opacity: 1;
+    z-index: 0;
+    will-change: auto;
 
-    &.visible {
-      opacity: 1;
+    &.active {
+      z-index: 1;
+      visibility: visible;
+      transform: translateY(0);
+      transition: transform ease-out 2s;
+    }
+
+    &.inactive {
+      z-index: 0;
+      visibility: hidden;
+      transform: translateY(100vh);
+      transition: transform ease-out 2s;
     }
   }
 }
@@ -54,52 +44,31 @@ html {
 }
 
 .page {
-  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  opacity: 1;
-  transition: all 300ms ease-in-out;
-  z-index: 0;
-  will-change: auto;
-
-  &.active {
-    z-index: 1;
-    visibility: visible;
-  }
-
-  &.inactive {
-    z-index: 0;
-    visibility: hidden;
-  }
-}
-
-#blank {
-  width: 100vw;
   height: 100vh;
-  opacity: 1;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  transition: transform 300ms ease-in-out;
-  transform: translateY(-100%);
-
-  &.visible {
-    transition: transform 0ms ease-in-out;
-    transform: translateY(0);
-  }
+  image-rendering: -webkit-optimize-contrast;
 }
 
-.text-overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-align: center;
+.page1 {
+  background-image: url("../../assets/hero206.jpg");
 }
 
-// Additional styles if needed
+.page2 {
+  background-image: url("../../assets/1.jpg");
+}
+
+.page3 {
+  background-image: url("../../assets/2.jpg");
+}
+
+.page4 {
+  background-image: url("../../assets/3.jpg");
+}
+
+.page5 {
+  background-image: url("../../assets/4.jpg");
+}
