--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -14,7 +14,7 @@ div {
     list-style: none;
     z-index: 1;
     padding-inline: 2rem;
-    z-index: 1;
+    z-index: 2;
     @media screen and (max-width: 990px) {
       z-index: 2;
     }
@@ -34,6 +34,10 @@ div {
     .cart-ul {
       display: flex;
       gap: 1.2rem;
+
+      a:-webkit-any-link {
+        text-decoration: none;
+      }
 
       .first-latter {
         font-size: 1.6rem;
