--- a/frontend/src/components/contact/contact.scss
+++ b/frontend/src/components/contact/contact.scss
@@ -3,18 +3,24 @@
     display: flex;
     justify-content: end;
     align-items: center;
-    background-image: url("../../assets/contact6.jpg");
-    background-position: bottom;
+    background-image: url("../../assets/contact.jpg");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
     height: 100vh;
     font-family: serif;
+
     h1 {
       letter-spacing: 1.5rem;
       font-size: 3.5rem;
       text-shadow: 3px 3px 7px black;
+    }
+    @media screen and (max-width: 1280px) {
+      justify-content: center;
+      align-items: end;
+      padding-bottom: 3rem;
     }
   }
   .contact-us {
@@ -22,6 +28,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     .contact-div {
       width: 50%;
       margin-top: 10rem;
@@ -38,8 +45,8 @@
       }
       p {
         margin-block: 2rem;
-        line-height: 1.6rem;
-        font-size: 1.3rem;
+        line-height: 2rem;
+        font-size: 1.6rem;
       }
       .contact-form {
         gap: 2rem;
@@ -82,6 +89,15 @@
             border: #ffffff5e solid 2px;
           }
         }
+      }
+    }
+
+    .success-message {
+      background-color: #32251d6b;
+
+      p {
+        padding: 0.5rem;
+        margin-left: 1rem;
       }
     }
     .location-div {
