--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,15 +1,74 @@
+// Component-specific styles
 .hero {
-  background-image: url("../../assets/hero206.jpg");
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+
+  .page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 2rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    opacity: 1;
+    z-index: 0;
+    will-change: auto;
+
+    &.active {
+      z-index: 1;
+      visibility: visible;
+      transform: translateY(0);
+      transition: transform ease-out 2s;
+    }
+
+    &.inactive {
+      z-index: 0;
+      visibility: hidden;
+      transform: translateY(100vh);
+      transition: transform ease-out 2s;
+    }
+  }
+}
+
+.page-container {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.page {
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  .logo {
-    width: 55%;
-    max-width: 22rem;
-  }
+  image-rendering: -webkit-optimize-contrast;
+}
+
+.page1 {
+  background-image: url("../../assets/hero206.jpg");
+}
+
+.page2 {
+  background-image: url("../../assets/1.jpg");
+}
+
+.page3 {
+  background-image: url("../../assets/2.jpg");
+}
+
+.page4 {
+  background-image: url("../../assets/3.jpg");
+}
+
+.page5 {
+  background-image: url("../../assets/4.jpg");
 }
