--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -12,10 +12,9 @@ div {
     font-size: 1.5rem;
     font-family: serif;
     list-style: none;
-    padding-inline: 25px;
     z-index: 1;
-    padding-inline: 15px;
-    z-index: 1;
+    padding-inline: 2rem;
+    z-index: 2;
     @media screen and (max-width: 990px) {
       z-index: 2;
     }
@@ -34,18 +33,33 @@ div {
     }
     .cart-ul {
       display: flex;
-      gap: 0.5rem;
-      .cart-icon {
-        color: white;
-        font-size: 1.2rem;
+      gap: 1.2rem;
+
+      a:-webkit-any-link {
+        text-decoration: none;
+      }
+
+      .first-latter {
+        font-size: 1.6rem;
+        padding-inline: 0.3rem;
+        color: black;
+        background-color: white;
+        border-radius: 50%;
         &:hover {
-          transform: scale(1.3);
+          background-color: #e0ab88;
+        }
+      }
+      .cart-icon {
+        font-size: 1.7rem;
+        color: white;
+        &:hover {
+          color: #e0ab88;
         }
       }
       .cart-li .btn-badge {
         position: absolute;
         top: 0;
-        right:2.1rem;
+        right: 2.1rem;
         background-color: var(--black);
         color: var(--white);
         font-size: 1.2rem;
@@ -54,7 +68,7 @@ div {
         line-height: 2.2;
         border-radius: 20px;
         font-weight: bold;
-        color:#e0ab88;
+        color: #e0ab88;
       }
     }
   }
