--- a/frontend/src/components/services/appointments/Appointments.scss
+++ b/frontend/src/components/services/appointments/Appointments.scss
@@ -213,6 +213,7 @@
     margin: 0.5rem;
     @media screen and (max-width: 1080px) {
       margin-bottom: 1rem;
+      height: 150px;
     }
   }
 
@@ -351,7 +352,7 @@
     @media screen and (max-width: 1080px) {
       // width: 90%;
       width: 80vw;
-      // height: 60vh;
+      // height: 10vh;
       padding: 0;
       font-size: 15px;
       h3 {
