--- a/frontend/src/components/register/register.scss
+++ b/frontend/src/components/register/register.scss
@@ -1,13 +1,16 @@
 .register-container {
-  background-color: #1c1919;
+  background-color: #1C1919;
   color: rgba(255, 255, 255, 0.77);
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  margin-top: 4rem;
   .register-form {
+    font-family: serif;
+    font-style: italic;
+    font-size: 2rem;
     width: 650px;
     padding: 4rem;
     display: flex;
@@ -15,7 +18,8 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    box-shadow: 3px 3px 15px -5px #b08568;
+    box-shadow: 3px 3px 15px -5px #B08568;
+    //box-shadow: 0px 5px 15px -2px rgb(0, 0, 0);
     border-radius: 25px;
     font-family: sans-serif;
     font-size: 2rem;
@@ -25,10 +29,8 @@
       box-shadow: none;
       border-radius: 0;
     }
-
     transition: transform 0.7s ease, opacity 0.7s ease;
     transform-origin: bottom;
-
     p {
       letter-spacing: 0.2rem;
       // font-size: 3rem;
@@ -62,23 +64,67 @@
         padding-right: 1rem;
       }
     }
-    .register-button {
+    .register-div {
       width: 100%;
-      padding: 20px;
-      margin-top: 1.5rem;
-      font-size: 1.3rem;
-      background-color: #b08568d3;
-      border-radius: 30px;
-      border: #b08568 solid 2px;
-
-      &:hover {
-        border: #ffffff5e solid 2px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+      }
+      .login {
+        color: #b0856885;
+        padding-top: 38px;
+        font-size: 1.2rem;
+      }
+      .register-button {
+        padding: 8px;
+        width: 120px;
+        margin-top: 2rem;
+        font-size: 1.2rem;
+        background-color: #b08568d3;
+        border-radius: 10px;
+        border: #B08568 solid 2px;
+        &:hover {
+          background-color: #B08568;
+          border: #ffffff5e solid 2px;
+        }
       }
     }
-    .register-button2 {
-      font-size: 1.5rem;
-      padding: 5rem;
-      color: white;
+    
+    .register-button-div {
+      width: 100%;
+      
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+      }
+      .register-button {
+        width: 100%;
+        padding: 8px;
+        margin-top: 2rem;
+        font-size: 1.2rem;
+        background-color: #b08568d3;
+        align-items: center;
+        border-radius: 10px;
+        border: #b08568 solid 2px;
+        margin-right: 30px;
+
+        &:hover {
+          background-color: #b08568;
+          border: #ffffff5e solid 2px;
+        }
+      }
+      .login {
+        width: 100%;
+        color: #b0856885;
+        font-size: 1.2rem;
+        margin-left: 10px;
+      }
     }
     .register-button-div {
       width: 100%;
