--- a/frontend/src/components/services/appointments/Appointments.scss
+++ b/frontend/src/components/services/appointments/Appointments.scss
@@ -32,6 +32,7 @@
     height: 60%;
 
     @media screen and (max-width: 1080px) {
+      height: 90vh;
       border-right: none;
       display: flex;
       justify-content: start;
@@ -39,6 +40,9 @@
       padding: 0;
       h1 {
         font-size: 2rem;
+        @media screen and (max-width: 1080px) {
+          font-size: 1.8rem;
+        }
       }
     }
     .div-container {
@@ -49,12 +53,12 @@
       width: 50vw;
       @media screen and (max-width: 1080px) {
         display: flex;
-        height: 60vh;
-        width: 90%;
+        height: 65vh;
+        width: 100%;
         gap: 0;
         flex-direction: column;
         h3 {
-          font-size: 1.2rem;
+          font-size: 1.1rem;
         }
       }
     }
@@ -63,6 +67,10 @@
       width: 61%;
       // overflow: hidden;
       // font-size: 16px;
+      @media screen and (max-width: 1080px) {
+        height: 50%;
+      }
+
       .react-calendar {
         font-size: 1.2rem;
         font-family: serif;
@@ -86,7 +94,7 @@
         font-size: 1.2rem;
         padding: 0.5rem;
         @media screen and (max-width: 1080px) {
-          padding: 0;
+          padding: 5px;
           font-size: 14px;
         }
       }
@@ -102,7 +110,7 @@
         font-size: 1rem;
         border: none;
         margin-left: 1.3rem;
-        
+
         @media screen and (max-width: 1080px) {
           padding: 0;
           font-size: 12px;
@@ -113,7 +121,7 @@
         font-size: 1.5rem;
       }
       .react-calendar__tile:disabled {
-        color: gray; 
+        color: gray;
       }
       .react-calendar__navigation__label {
         font-size: 1.5rem;
@@ -122,8 +130,8 @@
         background-color: #f8ac7990;
         border-radius: 20px;
       }
-      .react-calendar__tile:focus {
-        background-color: #b96c93a3;
+      .react-calendar__tile--active {
+        background-color: #be784990;
         border-radius: 10px;
       }
     }
@@ -132,28 +140,27 @@
       select {
         width: 100%;
       }
-      .popup-container{
-position: relative;
-.popup{
-  position: absolute;
-  top: calc(100% + 10px); /* Adjust the distance from the dropdown */
-  left: 0;
-  background-color: transparent;
-  font-size: 1.2rem;
-  border: 1px solid #b08568;
-  padding: 10px;
-  color: #fdf9f6;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  p{
-    color: crimson;
-    font-size: 1rem;
-  }
-}
-.popup-content{
-display: flex;
-}
-
+      .popup-container {
+        position: relative;
+        .popup {
+          position: absolute;
+          top: calc(100% + 10px); /* Adjust the distance from the dropdown */
+          left: 0;
+          background-color: transparent;
+          font-size: 1.2rem;
+          border: 1px solid #b08568;
+          padding: 10px;
+          color: #fdf9f6;
+          border-radius: 4px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          p {
+            color: crimson;
+            font-size: 1rem;
+          }
+        }
+        .popup-content {
+          display: flex;
+        }
       }
     }
     .form-content {
@@ -185,13 +192,13 @@ display: flex;
       font-size: 1rem;
       font-family: serif;
     }
-    
+
     h3 {
       padding: 1rem 0;
       font-size: 1.5rem;
     }
   }
-// Animation confirm Button
+  // Animation confirm Button
   .confirm-button {
     display: inline-block;
     background-color: #1c1919;
@@ -203,11 +210,16 @@ display: flex;
     overflow: hidden;
     transition: all 0.5s ease-in;
     z-index: 0;
-   }
-   
-   .confirm-button::before,
-   .confirm-button::after {
-    content: '';
+    margin: 0.5rem;
+    @media screen and (max-width: 1080px) {
+      margin-bottom: 1rem;
+      height: 150px;
+    }
+  }
+
+  .confirm-button::before,
+  .confirm-button::after {
+    content: "";
     position: absolute;
     top: 0;
     width: 0;
@@ -216,41 +228,46 @@ display: flex;
     transition: all 0.5s;
     overflow: hidden;
     z-index: -1;
-   }
-   
-.confirm-button::before {
+  }
+
+  .confirm-button::before {
     left: -10px;
-    background: #e0ac8999;
-   }
-   
-   .confirm-button::after {
+    background: #b08568;
+  }
+
+  .confirm-button::after {
     right: -10px;
-    background: #e0ac8999;
-   }
-   
-   .confirm-button:hover::before,
-   .confirm-button:hover::after {
+    background: #b08568;
+  }
+
+  .confirm-button:hover::before,
+  .confirm-button:hover::after {
     width: 58%;
-   }
-   
-   .confirm-button:hover span {
+  }
+
+  .confirm-button:hover span {
     color: #0f0206;
     transition: 0.3s;
-   }
-   
-   .confirm-button span {
+  }
+
+  .confirm-button span {
     color: #fdf9f6;
     font-family: serif;
     font-size: 18px;
     transition: all 0.3s ease-in;
-   }
-
+  }
 }
 .submit-button {
   width: 70%;
   margin-top: 2.5rem;
   text-align: end;
- button {
+  @media screen and (max-width: 1080px) {
+    // margin-top: 3rem;
+    width: 15rem;
+    align-items: center;
+  }
+
+  button {
     background-color: transparent;
     border: none;
     font-size: 1.5rem;
@@ -261,6 +278,9 @@ display: flex;
     width: 8rem;
     margin: 2rem;
     padding: 1px;
+    @media screen and (max-width: 1080px) {
+      margin: 1rem;
+    }
   }
   button:hover {
     font-size: 1.6rem;
@@ -273,27 +293,43 @@ display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  .data-container {
+    overflow-y: auto;
+    height: 80%;
+    width: 100%;
+    scrollbar-width: thin;
+    scrollbar-color: #b08568 #1c1919;
+  }
+  // flex-wrap: wrap;
+  // scrollbar-width: 1rem;
+  height: 70%;
   width: 20%;
+  .total-price {
+    margin-top: 1rem;
+  }
+  @media screen and (max-width: 1080px) {
+    height: 100vh;
+    width: 90vw;
+  }
   h2 {
     font-size: 3rem;
     margin: 2rem;
     @media screen and (max-width: 1080px) {
-      padding: 2rem;
-      margin-top: 8rem;
-      font-size: 2rem;
+      padding: 1rem;
+      // margin-top: 4rem;
+      font-size: 1.8rem;
       border-top: 4px double #b08568;
       border-radius: 20px;
     }
   }
 
   .submitted-data {
-   
+
     margin: 1rem;
     p {
       font-size: 1.2em;
       color: #fbe2d1;
-      span{
+      span {
         color: #bd7646;
         font-weight: bolder;
         font-size: 1.5rem;
@@ -303,20 +339,20 @@ display: flex;
       align-items: end;
       font-size: 2rem;
       padding: 2rem;
-
     }
     display: flex;
     align-items: center;
     justify-content: center;
-gap: 1rem;
-    .delete-button{
+    gap: 1rem;
+    .delete-button {
       color: rgb(121, 44, 44);
       font-size: 2rem;
     }
 
     @media screen and (max-width: 1080px) {
+      // width: 90%;
       width: 80vw;
-    height: 80vh;
+      // height: 10vh;
       padding: 0;
       font-size: 15px;
       h3 {
